# OpenClaw-DeepReeder

./: .gitignore  README.md  README_ar.md  README_es.md  README_fr.md  README_ja.md  README_ko.md  README_zh.md  pyproject.toml  requirements.txt
deepreader_skill/: SKILL.md  __init__.py  manifest.json  requirements.txt
deepreader_skill/core/: router.py  storage.py  utils.py
deepreader_skill/integrations/: notebooklm.py
deepreader_skill/parsers/: generic.py  twitter.py
tests/: test_twitter_parser.py
