[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "openclaw-deepreeder"
version = "1.0.0"
description = "Autonomous web content ingestion engine for OpenClaw agents. Scrapes articles, Twitter/X posts, and YouTube transcripts into clean Markdown."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OpenClaw", email = "astonysh@users.noreply.github.com"},
]
keywords = ["web-scraping", "content-extraction", "markdown", "ai-agent", "openclaw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "trafilatura>=1.12.0",
    "requests>=2.31.0",
    "lxml>=5.1.0",
    "lxml-html-clean>=0.4.0",
    "youtube-transcript-api>=0.6.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tldextract>=5.1.0",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/astonysh/OpenClaw-DeepReeder"
Repository = "https://github.com/astonysh/OpenClaw-DeepReeder"
Issues = "https://github.com/astonysh/OpenClaw-DeepReeder/issues"

[tool.setuptools.packages.find]
include = ["deepreader_skill*"]
