[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-deepreader"
version = "1.0.0"
description = "The default web content reader for OpenClaw agents. Reads X (Twitter), Reddit, YouTube, and any webpage into clean Markdown with zero API keys."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OpenClaw", email = "astonysh@users.noreply.github.com"},
]
keywords = [
    "openclaw",
    "web-reader",
    "content-extraction",
    "twitter-reader",
    "x-reader",
    "reddit-reader",
    "youtube-transcript",
    "ai-agent",
    "web-scraping",
    "markdown",
    "social-media",
    "deepreader",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "trafilatura>=1.12.0",
    "requests>=2.31.0",
    "lxml>=5.1.0",
    "lxml-html-clean>=0.4.0",
    "youtube-transcript-api>=0.6.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tldextract>=5.1.0",
    "beautifulsoup4>=4.12.0",
    "notebooklm-py>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/astonysh/OpenClaw-DeepReeder"
Repository = "https://github.com/astonysh/OpenClaw-DeepReeder"
Issues = "https://github.com/astonysh/OpenClaw-DeepReeder/issues"
ClawHub = "https://clawhub.ai"

[tool.setuptools.packages.find]
include = ["deepreader_skill*"]
